// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledDiv component render StyledDiv with a different background color 1`] = `
<div
  className="sc-bdVaJa dUHSgJ"
>
  nice background color
</div>
`;

exports[`StyledDiv component render StyledDiv with a different border color 1`] = `
<div
  className="sc-bdVaJa jowqiV"
>
  nice border color
</div>
`;

exports[`StyledDiv component render StyledDiv with a different border radius 1`] = `
<div
  className="sc-bdVaJa erEpgF"
>
  ooh, curvy
</div>
`;

exports[`StyledDiv component render StyledDiv with a different border width 1`] = `
<div
  className="sc-bdVaJa hvHywP"
>
  damn this border extra thicc
</div>
`;

exports[`StyledDiv component render StyledDiv with a different border width and border color 1`] = `
<div
  className="sc-bdVaJa fRXxiL"
>
  wooooaaaahhhh
</div>
`;

exports[`StyledDiv component render StyledDiv with a different width 1`] = `
<div
  className="sc-bdVaJa bSDcMg"
  width="full"
>
  w i d e
</div>
`;

exports[`StyledDiv component render default StyledDiv as expected 1`] = `
<div
  className="sc-bdVaJa eWMAkI"
>
  I have nothing to offer
</div>
`;
